--- a/Source/DataBoss.Testing.SqlServer/DataBoss.Testing.SqlServer.csproj
+++ b/Source/DataBoss.Testing.SqlServer/DataBoss.Testing.SqlServer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net452;net472;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
