--- a/Source/DataBoss.Migrations/DataBoss.Migrations.csproj
+++ b/Source/DataBoss.Migrations/DataBoss.Migrations.csproj
@@ -6,12 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NpgSql" Version="7.0.6" />
     <PackageReference Include="System.Memory" Version="4.5.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\DataBoss.Data.SqlClient\DataBoss.Data.SqlClient.csproj" />
+    <ProjectReference Include="..\DataBoss.Data\DataBoss.Data.csproj" />
     <ProjectReference Include="..\DataBoss.Linq\DataBoss.Linq.csproj" />
   </ItemGroup>
 
