--- a/Source/DataBoss.PowerArgs/DataBoss.PowerArgs.csproj
+++ b/Source/DataBoss.PowerArgs/DataBoss.PowerArgs.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net452;net472</TargetFrameworks>
+    <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
