--- a/Source/DataBoss/DataBoss.csproj
+++ b/Source/DataBoss/DataBoss.csproj
@@ -23,5 +23,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NpgSql" Version="7.0.6" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 </Project>
