--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,10 +9,10 @@
     <Description>Your data. Like a Boss.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/drunkcod/DataBoss</RepositoryUrl>
-    <VersionPrefix>0.0.107</VersionPrefix>
-	<!--VersionSuffix>beta.1</VersionSuffix-->
+    <VersionPrefix>0.0.108</VersionPrefix>
+	  <VersionSuffix>rc.1</VersionSuffix>
     <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
     <AssemblyInformationalVersion>$(VersionPrefix)</AssemblyInformationalVersion>
-    <AssemblyFileVersion>2023.02.27</AssemblyFileVersion>
+    <AssemblyFileVersion>2024.04.08</AssemblyFileVersion>
   </PropertyGroup>
 </Project>
