--- a/Source/DataBoss.Data.MsSql/DataBoss.Data.MsSql.csproj
+++ b/Source/DataBoss.Data.MsSql/DataBoss.Data.MsSql.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net8.0;net6.0;netstandard2.1</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     
     <DefineConstants>$(DefineConstants);MSSQLCLIENT</DefineConstants>
