--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -10,9 +10,9 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/drunkcod/DataBoss</RepositoryUrl>
     <VersionPrefix>0.0.108</VersionPrefix>
-	  <VersionSuffix>rc.2</VersionSuffix>
+	  <!--VersionSuffix>rc.2</VersionSuffix -->
     <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
     <AssemblyInformationalVersion>$(VersionPrefix)</AssemblyInformationalVersion>
-    <AssemblyFileVersion>2024.04.08</AssemblyFileVersion>
+    <AssemblyFileVersion>2024.07.16</AssemblyFileVersion>
   </PropertyGroup>
 </Project>
