--- a/Source/DataBoss.Data.Npgsql/DataBoss.Data.Npgsql.csproj
+++ b/Source/DataBoss.Data.Npgsql/DataBoss.Data.Npgsql.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <Nullable>enable</Nullable>
 	<LangVersion>latest</LangVersion>
   </PropertyGroup>
