--- a/Source/DataBoss.Specs/DataBoss.Specs.csproj
+++ b/Source/DataBoss.Specs/DataBoss.Specs.csproj
@@ -11,7 +11,7 @@
     <None Remove="Specs\Linq\**" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataBoss.Data.SqlClient\DataBoss.Data.SqlClient.csproj" />
+    <ProjectReference Include="..\DataBoss.Data.MsSql\DataBoss.Data.MsSql.csproj" />
     <ProjectReference Include="..\DataBoss.Data\DataBoss.Data.csproj" />
     <ProjectReference Include="..\DataBoss.PowerArgs\DataBoss.PowerArgs.csproj" />
     <ProjectReference Include="..\DataBoss.Uuid\DataBoss.Uuid.csproj" />
