--- a/Source/DataBoss/DataBoss.csproj
+++ b/Source/DataBoss/DataBoss.csproj
@@ -15,7 +15,7 @@
   <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="9.0.3" />
 
-    <ProjectReference Include="..\DataBoss.Data.SqlClient\DataBoss.Data.SqlClient.csproj" />
+    <ProjectReference Include="..\DataBoss.Data.MsSql\DataBoss.Data.MsSql.csproj" />
     <ProjectReference Include="..\DataBoss.Data.Npgsql\DataBoss.Data.Npgsql.csproj" />
     <ProjectReference Include="..\DataBoss.Data\DataBoss.Data.csproj" />
     <ProjectReference Include="..\DataBoss.Migrations\DataBoss.Migrations.csproj" />
